k8s/installer/installer.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: installer
  namespace: installer
spec: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: installer
  name: installer
  namespace: installer
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3003
  selector:
    service: installer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: installer
  name: installer
  namespace: installer
spec:
  replicas: 1
  selector:
    matchLabels:
      service: installer
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: installer
      annotations:
        diun.enable: "true"
    spec:
      containers:
        - env:
            - name: HTTP_HOST
              value: 0.0.0.0
            - name: PORT
              value: "3003"
            - name: USER
              value: waylonwalker
          image: waylonwalker/installer
          name: installer
          ports:
            - containerPort: 3003
              protocol: TCP
          resources: {}
      # imagePullSecrets:
      #   - name: regcred
      restartPolicy: Always
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    service: installer
  name: installer
  namespace: installer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: i.wayl.one
      http:
        paths:
          - backend:
              service:
                name: installer
                port:
                  number: 3003
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - i.wayl.one
      secretName: installer-cert-tls
status:
  loadBalancer: {}
